Fix for double scrollbar

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -5,10 +5,6 @@
 @tailwind utilities;
 
 @layer base {
-  html {
-    overflow-y: scroll;
-  }
-
   html,
   body {
     width: 100%;
